<resources>
    <string name="app_name">SICOAE</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="enter">Ingresar</string>
    <string name="forgot_password"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="calendar">Calendario</string>
    <string name="stadistics">Estadísticas</string>
    <string name="reference">Referencia</string>
    <string name="my_profile">Mi perfil</string>
    <string name="logout">Cerrar sesión</string>
    <string name="user">Usuario</string>
    <string name="note_forgot_password">Para restablecer la contraseña, introduce la dirección de correo electrónico que utilizas para iniciar sesión</string>
    <string name="restore">Restablecer</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="reset_password">¡Contraseña restablecida!</string>
    <string name="accept">Aceptar</string>
    <string name="select_date">Selecciona una fecha:</string>
    <string name="student">Estudiante</string>
    <string name="period">Periodo</string>
    <string name="note_stadistics">El reporte se enviará a tu correo electrónico</string>
    <string name="generate">Generar</string>
    <string name="who_picks_up">¿Quién recoge al estudiante?</string>
    <string name="complete_name">Nombre completo</string>
    <string name="access_reference">Referencia de acceso</string>
    <string name="step_1">Díctale la referencia al vigilante para que entre el estudiante a la institución.</string>
    <string name="step_2">La referencia es válida únicamente el día que se haya generado.</string>
    <string name="step_3">Solamente se puede generar una referencia del mismo estudiante por día.</string>
    <string name="share">Compartir</string>
    <string name="capture">Captura</string>
    <string name="phone">Teléfono</string>
    <string name="old_password">Contraseña anterior</string>
    <string name="required_password_lenght">Mínimo 6 caracteres</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="close">Cerrar</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="historical">Historial</string>
    <string name="save">Guardar</string>
    <string name="screenshot">Captura de pantalla</string>
    <string name="description_screenshot">Mostrar captura de pantalla</string>
    <string name="title_notification_screenshot">Captura de pantalla</string>
    <string name="content_notification_screenshot">Se ha capturado la referencia</string>
    <string name="required_permission">Permiso requerido</string>
    <string name="required_permission_text">Se requiere del permiso para el uso correcto de la aplicación</string>
    <string name="denied_permission">Permiso denegado</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="required_field">Campo requerido</string>
    <string name="wait_a_moment">Espere un momento</string>
    <string name="update_token_successful">Token actualizado correctamente</string>
    <string name="update_password_succesful">Contraseña actualizada correctamente</string>
    <string name="update_reference_succesful">Referencia actualizada correctamente</string>
    <string name="without_registration">Sin registro</string>
    <string name="notification_student">Estudiante</string>
    <string name="notification_description_student">Entrada o salida del estudiante</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="not_references">Sin referencias</string>

</resources>
