<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="@dimen/top_img_login"
        android:layout_centerHorizontal="true"
    />

    <TextView
        android:id="@+id/txt_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:text="@string/sign_in"
        android:textColor="@android:color/black"
        android:textSize="@dimen/size_title"
        android:layout_marginTop="@dimen/top_img_login"
        android:layout_centerHorizontal="true"
    />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_sign_in"
        android:layout_margin="@dimen/margin_form"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:background="@drawable/rounded_edittext_states"
        android:padding="@dimen/padding"
    />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_marginLeft="@dimen/margin_form"
        android:layout_marginRight="@dimen/margin_form"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/rounded_edittext_states"
        android:padding="@dimen/padding"
    />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:text="@string/enter"
        android:layout_margin="@dimen/margin_form"
        android:background="@drawable/rounded_button_states"
        android:textColor="@android:color/white"
        android:padding="@dimen/padding"
    />

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sign_in"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:textSize="@dimen/size_footer"
        android:textColor="@color/link"
    />

</RelativeLayout>