<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.ForgotPasswordActivity"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:focusableInTouchMode="true">

    <include layout="@layout/toolbar"/>

    <ImageView
            android:layout_width="@dimen/size_img_title"
            android:layout_height="@dimen/size_img_title"
            android:src="@drawable/ic_lock_yellow"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/top_img"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_form"
            android:layout_marginLeft="@dimen/margin_form"
            android:layout_marginRight="@dimen/margin_form"
            android:textSize="@dimen/size_txt_body"
            android:text="@string/note_forgot_password"
            android:textColor="@android:color/black"
            />

    <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_form"
            android:layout_marginLeft="@dimen/margin_form"
            android:layout_marginRight="@dimen/margin_form"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:background="@drawable/rounded_edittext_states"
            android:padding="@dimen/padding"
            />

    <Button
            android:id="@+id/btn_restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restore"
            android:layout_margin="@dimen/margin_form"
            android:background="@drawable/rounded_button_states"
            android:textColor="@android:color/white"
            android:padding="@dimen/padding"
            />

</LinearLayout>