<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.EditReferenceActivity"
        android:background="@android:color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            >

        <include layout="@layout/toolbar"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reference"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/size_txt_title_h2"
                android:layout_marginTop="@dimen/margin_form"
                android:layout_marginLeft="@dimen/margin_form"
                android:layout_marginRight="@dimen/margin_form"
                />

        <EditText
                android:id="@+id/et_reference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_items"
                android:layout_marginLeft="@dimen/margin_form"
                android:layout_marginRight="@dimen/margin_form"
                android:inputType="text"
                android:background="@drawable/rounded_edittext_states"
                android:padding="@dimen/padding"
                android:focusable="false"
                android:clickable="false"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/size_txt_title_h2"
                android:layout_marginTop="@dimen/margin_form"
                android:layout_marginLeft="@dimen/margin_form"
                android:layout_marginRight="@dimen/margin_form"
                />

        <EditText
                android:id="@+id/et_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_items"
                android:layout_marginLeft="@dimen/margin_form"
                android:layout_marginRight="@dimen/margin_form"
                android:inputType="text"
                android:background="@drawable/rounded_edittext_states"
                android:padding="@dimen/padding"
                android:focusable="false"
                android:clickable="false"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/who_picks_up"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/size_txt_title_h2"
                android:layout_marginTop="@dimen/margin_form"
                android:layout_marginLeft="@dimen/margin_form"
                android:layout_marginRight="@dimen/margin_form"
                />

        <EditText
                android:id="@+id/et_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_items"
                android:layout_marginLeft="@dimen/margin_form"
                android:layout_marginRight="@dimen/margin_form"
                android:inputType="text"
                android:hint="@string/complete_name"
                android:background="@drawable/rounded_edittext_states"
                android:padding="@dimen/padding"
                />

        <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_margin="@dimen/margin_form"
                android:background="@drawable/rounded_button_states"
                android:textColor="@android:color/white"
                android:padding="@dimen/padding"
                />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>